QML: Check result when constructing object from metaobject

If you pass insufficient arguments to call the ctor, the resulting
object is null and cannot be used.

Fixes: QTBUG-114910
Change-Id: Ib184684b6a7665bcdc1a3fe8f8a2401a33a8ac1c
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 3110117bfaa36c5363bfa46cd82b01ff6723dd8d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>