tests/auto/qml/qjsengine/tst_qjsengine.cpp
@@ -997,6 +997,17 @@ private:
     int m_called = 1;
 };
 
+class TestQMetaObject2 : public QObject
+{
+    Q_OBJECT
+public:
+    Q_INVOKABLE TestQMetaObject2(int a) : m_called(a) {}
+    int called() const { return m_called; }
+
+private:
+    int m_called = 1;
+};
+
 void tst_QJSEngine::newQObjectPropertyCache()
 {
     QScopedPointer<QObject> obj(new QObject);
@@ -1071,6 +1082,18 @@ void tst_QJSEngine::newQMetaObject() {
         QCOMPARE(metaObject.property("C").toInt(), 2);
     }
 
+    {
+        QJSEngine engine;
+        const QJSValue metaObject = engine.newQMetaObject(&TestQMetaObject2::staticMetaObject);
+        engine.globalObject().setProperty(QLatin1String("Example"), metaObject);
+
+        const QJSValue invalid = engine.evaluate(QLatin1String("new Example()"));
+        QVERIFY(invalid.isError());
+        QCOMPARE(invalid.toString(), QLatin1String("Error: Insufficient arguments"));
+
+        const QJSValue valid = engine.evaluate(QLatin1String("new Example(123)"));
+        QCOMPARE(qjsvalue_cast<TestQMetaObject2 *>(valid)->called(), 123);
+    }
 }
 
 void tst_QJSEngine::exceptionInSlot()
